<resources>
    <string name="app_name">Covify</string>
    <string name="covid_form">Covid Form</string>
    <string name="patient_name">Patient Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="select_language">Select Language</string>
    <string name="tnc">Terms and Conditions</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="proceed">Continue</string>
    <string name="step_1">Before proceeding with the test, fill in the details in the fields below. All information is mandatory</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_mobile_number">Enter mobile number (without +91)</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="current_address">Current Address</string>
    <string name="pin_code">Pin Code</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="next">Next</string>
    <string name="step_2">Step 2</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="adhar_number">ID Type</string>
    <string name="enter_adhar_number">Enter Id number</string>
    <string name="symptom_status">Symptom Status</string>
    <string name="symptoms">Symptoms</string>
    <string name="underlying_medical_condition">Underlying Medical Condition</string>
    <string name="sample_collection_by">Sample Collection By</string>
    <string name="step_3">Step 3</string>
    <string name="result_interpretation_time_in_mins">Result Interpretation Time(in mins)</string>
    <string name="enter_time_in_mins">Enter Time(in mins)</string>
    <string name="upload_test_result_use_camera">Upload Test Result(use camera)</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="invalid">Invalid</string>
    <string name="preview_form">Preview Form</string>
    <string name="submit">Submit</string>
    <string name="select_symptom">Select Symptom</string>
    <string name="select_medical_condition">Select Medical Condition</string>
    <string name="tnc_agreement">I understand that the data form the CoviFY app of my mobile phone will be shared with Indian Council for Medical Research(ICMR)</string>
    <string name="start_the_timer">Start the Timer</string>

    <string name="error_server_error">We\'ve encountered a technical error. Please try again.</string>
    <string name="error_email_invalid">Please input valid email id</string>
    <string name="error_text_blank">This field cannot be left blank</string>
    <string name="error_select_valid_state">Please select a valid state first</string>
    <string name="error">Error</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="type_of_id">ID Type</string>
    <string name="aadhar_card">Aadhaar Card</string>
    <string name="driving_license">Driving License</string>
    <string name="pan_card">PAN Card</string>
    <string name="voter_id_card">Voter ID Card</string>
    <string name="passport">Passport</string>
    <string name="id_card_no">ID Card No</string>
    <string name="ok">OK</string>
    <string name="countdown_timer">Countdown Timer</string>
    <string name="scan_cassette_qr_code">Scan QR Code of the cassette</string>
    <string name="take_picture">Take  picture of the test cassette</string>
    <string name="wait_for_timer">Please wait for the 15 minute timer to complete</string>
    <string name="wait_for_report">Please wait… Your Test Report is being prepared</string>
    <string name="cannot_go_back">Cannot go back while data is processing</string>
    <string name="retry">Retry</string>
    <string name="cancel_and_start_again">Cancel, and start the process again</string>
    <string name="otp_sent">OTP Sent</string>
    <string name="otp_sent_message">OTP sent to your number. Please enter.</string>
    <string name="nationality">Nationality</string>
    <string name="dob">Date of Birth</string>
    <string name="error_valid_mobile_number">Please enter a valid mobile number</string>
    <string name="occupation">Occupation</string>
    <string name="district">District</string>
    <string name="contact_number_belongs">Contact Number belongs to</string>
    <string name="login_with_otp">Login with OTP</string>
    <string name="new_user">New user? Create a new account</string>
    <string name="otp">Enter OTP</string>
    <string name="show_tests_history">Show Tests History</string>
    <string name="initiate_new_test">Initiate New Test</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="serial_number">Kit Serial Number :</string>
    <string name="register_new_user">Register New User</string>
    <string name="register">Register</string>
    <string name="vaccinated">Is vaccinated?</string>
    <string name="vaccine_received">Vaccine Received</string>
    <string name="existing_users">Start test for existing users:</string>
    <string name="email">Email</string>
    <string name="success">Success</string>
    <string name="signup_success_message">You have successfully registered, please login to continue</string>
    <string name="history">Tests History</string>
    <string name="download_report">Download Report</string>
    <string name="new_user_create_account">New User - Create Account</string>
    <string name="existing_user_login_with_otp">Existing User - Login with OTP</string>
    <string name="select_existing_profile">Select existing profile</string>
    <string name="contact_support">Contact Support</string>
    <string name="scan">Scan</string>
    <string name="error_otp_incorrect">OTP you entered is not correct</string>
    <string name="instructions">Instructions</string>

    <string name="call_us"><u>Call us at 18001237599</u></string>
    <string name="mail_us"><u>Email us at  rps.online@roche.com</u></string>
    <string name="sms_us"><u>SMS us at 18001237599</u></string>
    <string name="see_video"><u>See Video</u></string>
    <string name="error_reupload_image">The result was inconclusive, please try to re-upload the cassette image</string>
    <string name="turn_on_flashlight">Flashlight On</string>
    <string name="turn_off_flashlight">Flashlight Off</string>
    <string name="search">Search</string>
    <string name="arogya_setu_downloaded">Is Arogya Setu downloaded?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="does_1_date">Dose 1 received on:</string>
    <string name="does_2_date">Dose 2 received on:</string>

</resources>