<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sdbiosensor.form.CovidFormActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:textAllCaps="false"
        android:text="@string/step_1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:text="@string/patient_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edit_Firstname"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:textAllCaps="false"
            android:hint="@string/first_name"
            android:background="@drawable/edittextbackground"/>
        <EditText
            android:id="@+id/edit_Lastname"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:padding="10dp"
            android:hint="@string/last_name"
            android:textAllCaps="false"
            android:background="@drawable/edittextbackground"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:text="@string/gender"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">
        <RadioButton
            android:id="@+id/rb_Male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:text="@string/male"/>
        <RadioButton
            android:id="@+id/rb_Female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/female"/>
        <RadioButton
            android:id="@+id/rb_Others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/others"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:text="@string/mobile_number"/>
    <EditText
        android:id="@+id/edit_MobileNumber"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:inputType="number"
        android:hint="@string/enter_mobile_number"
        android:textAllCaps="false"
        android:background="@drawable/edittextbackground"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:text="@string/current_address"/>
    <EditText
        android:id="@+id/edit_Address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:hint="@string/enter_address"
        android:textAllCaps="false"
        android:background="@drawable/edittextbackground"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:text="@string/pin_code"/>
    <EditText
        android:id="@+id/edit_Pincode"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        android:inputType="number"
        android:layout_margin="5dp"
        android:hint="@string/enter_pincode"
        android:textAllCaps="false"
        android:background="@drawable/edittextbackground"/>
    <Button
        android:id="@+id/btn_Next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_margin="30dp"
        android:text="@string/next"/>

</LinearLayout>