<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sdbiosensor.form.CovidFormActivity1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:textAllCaps="false"
        android:text="@string/step_2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:text="@string/state"/>

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/sp_State"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:spinnerMode="dialog"
        android:background="@drawable/spinnerbackground"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:text="@string/city"/>

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/sp_City"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:spinnerMode="dialog"
        android:background="@drawable/spinnerbackground"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:text="@string/adhar_number"/>
    <Spinner
        android:id="@+id/sp_IdType"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:spinnerMode="dialog"
        android:background="@drawable/spinnerbackground"/>

    <EditText
        android:id="@+id/edit_Idnumber"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:visibility="gone"
        android:hint="@string/enter_adhar_number"
        android:padding="10dp"
        android:inputType="number"
        android:background="@drawable/edittextbackground"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:text="@string/symptoms"/>

    <TextView
        android:id="@+id/txt_Symptom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/select_symptom"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:background="@drawable/edittextbackground"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:text="@string/underlying_medical_condition"/>

    <TextView
        android:id="@+id/txt_Condition"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/select_medical_condition"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:background="@drawable/edittextbackground"/>

  

    <Button
        android:id="@+id/btn_Next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:background="@drawable/custombutton"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_margin="30dp"
        android:text="@string/next"/>


</LinearLayout>