<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sdbiosensor.form.CovidFormActivity2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:textAllCaps="false"
        android:text="@string/step_3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:text="@string/result_interpretation_time_in_mins"/>

    <EditText
        android:id="@+id/edit_Time"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:hint="@string/enter_time_in_mins"
        android:padding="10dp"
        android:inputType="number"
        android:background="@drawable/edittextbackground"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:text="@string/upload_test_result_use_camera"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/txt_Opengallery"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/open_gallery"
            android:textSize="18sp"
            android:padding="10dp"
            android:background="@drawable/edittextbackground"/>
        <Button
            android:id="@+id/btn_Upload"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="40dp"
            android:text="UPLOAD"
            android:layout_marginStart="10dp"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:text="Result"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">
        <RadioButton
            android:id="@+id/rb_Positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/positive"/>
        <RadioButton
            android:id="@+id/rb_Negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/negative"/>
        <RadioButton
            android:id="@+id/rb_Invalid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/invalid"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <Button
            android:id="@+id/btn_Previewform"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/preview_form"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/btn_Submit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/submit"/>

    </LinearLayout>

</LinearLayout>