<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white"
    tools:context=".screens.TimerActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/contact_support"
        android:textAllCaps="false"
        android:textColor="@color/app_blue"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/call_us"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:background="@drawable/animation_ripple"/>

    <TextView
        android:id="@+id/text_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/mail_us"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        android:textStyle="italic"
        android:background="@drawable/animation_ripple"/>

    <TextView
        android:id="@+id/text_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/sms_us"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="17sp"
        android:textStyle="italic"
        android:background="@drawable/animation_ripple"/>

</LinearLayout>