<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_blue"
    android:orientation="vertical"
    tools:context="com.sdbiosensor.covicatch.screens.SelectLanguageActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:gravity="center"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="100dp"/>

    <Button
        android:id="@+id/button_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/english"
        android:textAllCaps="false"
        android:textColor="@color/app_blue"
        android:textSize="18sp"
        android:padding="15dp"
        android:textStyle="bold"
        android:backgroundTint="@color/white"/>

    <Button
        android:id="@+id/button_hindi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/hindi"
        android:textAllCaps="false"
        android:textColor="@color/app_blue"
        android:textSize="18sp"
        android:padding="15dp"
        android:textStyle="bold"
        android:backgroundTint="@color/white"/>

</LinearLayout>