<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/img_app_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:gravity="center"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/register_new_user"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:text="@string/first_name"/>

            <EditText
                android:id="@+id/edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/first_name"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="17sp"
                android:background="@drawable/bg_edittext_white"
                android:inputType="phone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:text="@string/last_name"/>

            <EditText
                android:id="@+id/edit_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/last_name"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="17sp"
                android:background="@drawable/bg_edittext_white"
                android:inputType="phone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:text="@string/mobile_number"/>

            <EditText
                android:id="@+id/edit_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_mobile_number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="17sp"
                android:background="@drawable/bg_edittext_white"
                android:inputType="phone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:text="@string/email"/>

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="17sp"
                android:background="@drawable/bg_edittext_white"
                android:inputType="textEmailAddress"/>

            <Button
                android:id="@+id/button_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/app_blue"
                android:textSize="17sp"
                android:padding="15dp"
                android:textStyle="bold"
                android:backgroundTint="@color/white"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#a0000000"
        android:clickable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/white" />

    </RelativeLayout>

</RelativeLayout>